drkns 14.08.2017 21:38:39 +0000 - build 5006

1. Теперь FCTL_<G|S>ETUSERSCREEN можно использовать и из режимов редактора (-e) и просмотра (-v).

drkns 13.08.2017 17:07:42 +0000 - build 5005

1. Уточнение 4959.

drkns 11.08.2017 01:15:42 +0000 - build 5004

1. Рефакторинг.

drkns 09.08.2017 00:11:01 +0000 - build 5003

1. Ещё раз о владельцах.

drkns 08.08.2017 20:27:34 +0000 - build 5002

1. 0003466: Зависание/падение по перерасходу памяти при добавлении новых столбцов панели без указания ширины

2. С форума: Не показывает владельца файла на шаре windows

svs 08.08.2017 12:26:57 +0300 - build 5001

1. SQLite 3.20.0

drkns 06.08.2017 11:07:04 +0000 - build 5000

1. Ещё одно уточнение 4996.

drkns 04.08.2017 20:07:24 +0000 - build 4999

1. С форума: "Падение при выходе “наверх” из панели результатов RESearch"

drkns 04.08.2017 00:27:23 +0000 - build 4998

1. Уточнение 4997 - погнулась замена.

2. Там же - криво работала замена, содержащая "\r", и уже давно.

drkns 01.08.2017 20:39:18 +0000 - build 4997

1. Продолжение #3462 - не меняем позицию курсора без необходимости.

drkns 31.07.2017 20:01:11 +0000 - build 4996

1. Уточнение 4995.1.

2. 0003462: Поиск всех вхождений теряет вхождение в первой строке

3. Там же - не снимаем выделение раньше времени, а также если ничего не нашли.

drkns 30.07.2017 01:45:36 +0000 - build 4995

1. Рефакторинг.

drkns 23.07.2017 22:34:57 +0000 - build 4994

1. 0003457: Мышь работает в FAR даже при отключённом параметре "Настройки интерфейса - Мышь"

2. Рефакторинг.

drkns 23.07.2017 10:31:34 +0000 - build 4993

1. Не работал поиск в справке.

2. В некоторых случаях не работало автодополнение.

drkns 22.07.2017 13:25:18 +0000 - build 4992

1. С форума: Ошибочная индикация позиции ошибки в регэкспе

drkns 21.07.2017 19:29:12 +0000 - build 4991

1. Уточнение 4989.

drkns 20.07.2017 23:10:16 +0000 - build 4990

1. Вернём защиту от нехваток памяти, добавленную в 1741 и потерянную в 3791.

drkns 20.07.2017 01:09:52 +0000 - build 4989
